openshift/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: coffee-shop-backend
  labels:
    app: coffee-shop
    component: backend
    app.kubernetes.io/name: coffee-shop-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: coffee-shop
spec:
  to:
    kind: Service
    name: coffee-shop-backend
  port:
    targetPort: http
